--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  georgejkaye
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
