--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Home of the Bountiful Bizon Buddies!
+title: George Kaye
 email: georgejkaye@googlemail.com
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to the home of the Bountiful Bizon Buddies!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://www.georgejkaye.com
 avatar: https://raw.girhubusercontent.com/georgejkaye/georgejkaye.github.io/master/images/profile.jpg
+favicon: https://raw.girhubusercontent.com/georgejkaye/georgejkaye.github.io/master/images/profile.jpg
 twitter_username: thelordwibble
 github_username:  georgejkaye
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: slate
 plugins:
   - jekyll-feed
 
