--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: George Kaye
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Train enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/profile.jpg/
+avatar: profile.jpg
 
 #
 # Flags below are optional
