It might work now!

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: George Kaye
 description: Train enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: profile.jpg
+avatar: https://raw.githubusercontent.com/georgejkaye/georgejkaye.github.com/master/images/profile.png
 
 #
 # Flags below are optional
