Made various config changes

--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ footer-links:
   flickr:
   github: georgejkaye
   instagram:
-  linkedin:
+  linkedin: georgejkaye
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: thelordwibble
+  twitter: georgejkaye_
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: user/georgejkaye
   googleplus: # anything in your profile username that comes after plus.google.com/
