More config changes

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook: georgejkaye
   flickr:
   github: georgejkaye
-  instagram:
+  instagram: georgejkaye
   linkedin: georgejkaye
   pinterest:
   rss: # just type anything here for a working RSS icon
