--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: George Kaye
 
 # Short bio or description (displayed in the header)
-description: Computer scientist and rail enthusiast
+description: Computer scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/profile.png
