Trying a fix to the css problem

--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,7 @@ github:
   repo:           https://github.com/georgejkaye/georgejkaye.github.io
 
 # Gems
-gems:
-  - jekyll-paginate
-  - jekyll-gist
+gems: [jekyll-paginate, jekyll-gist]
 
 exclude:
   - Gemfile
