--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,13 @@ author:
   avatar:         /images/me/fb3.jpg
 
 paginate:         5
+paginate_path:    "/blog/page:num/"
 
 # Custom vars
 version:          2.1.0
 
 github:           https://github.com/georgejkaye
+misc:             /misc/
 
 # Gems
 plugins: 
