Updated photo of me

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ baseurl:          /
 
 author:
   name:           'George Kaye'            
-  avatar:         /images/me/fb4.jpg
+  avatar:         /images/me/me.jpg
 
 paginate:         5
 paginate_path:    "/blog/page:num/"
