--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink:        pretty
 
 # Setup
 title:            George Kaye
-tagline:          'Computer scientist'
+tagline:          'University of Birmingham'
 description:      'Hello world!'
 url:              https://georgejkaye.com
 baseurl:          /
