Enabled jekyll to see what it would do

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -26,3 +26,4 @@ jobs:
         publish_dir: ./_site
         publish_branch: master
         cname: www.georgejkaye.com
+        enable_jekyll: true
