--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ repository:       georgejkaye/georgejkaye.github.io
 
 author:
   name:           'George Kaye'            
-  avatar:         /images/me/me.jpg
+  avatar:         /images/me/me.webp
 
 #paginate:         0
 #paginate_path:    "/blog/page:num/"
