--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "eleventy": "^1.0.6",
     "js-yaml": "^4.1.0",
     "sass": "^1.43.4"
