Wrapped up the pictures page

--- a/src/data/links.yml
+++ b/src/data/links.yml
@@ -7,3 +7,9 @@ instagram: https://instagram.com/georgejkaye
 
 # misc
 cv: /files/cv.pdf
+
+# places
+winterbourne: https://www.winterbourne.org.uk/
+
+# conferences
+act2021: https://www.cl.cam.ac.uk/events/act2021/
