--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "eleventy": "^1.0.6",
     "js-yaml": "^4.1.0",
+    "moment": "^2.29.1",
     "sass": "^1.43.4"
   },
   "scripts": {
