Paginated the stations page

--- a/src/data/stations.yml
+++ b/src/data/stations.yml
@@ -5,7 +5,7 @@
 - name: Alvechurch
   crs: alv
 - name: Barnt Green
-  crs: bnt
+  crs: btg
 - name: Bescot Stadium
   crs: bsc
 - name: Birmingham New Street
