Did lots with the new tags system

--- a/src/data/papers.yml
+++ b/src/data/papers.yml
@@ -10,6 +10,7 @@
 - title: A visualiser for linear lambda-terms as rooted 3-valent maps
   details: Masters dissertation (2019), University of Birmingham
   file: 2019-04-08-masters
+  page: /lamviz/
   authors:
     - name: me
     - text: supervised by
