--- a/src/data/redirects.yml
+++ b/src/data/redirects.yml
@@ -2,3 +2,42 @@
   to: "/stations/"
 - from: "/blog/page-1/"
   to: "/blog/"
+- from: "/pages/fyp/visualiser/"
+  to: "/lamviz/visualiser/"
+- from: "/pages/fyp/gallery/"
+  to: "/lamviz/gallery/"
+- from: "/fyp/visualiser/"
+  to: "/lamviz/visualiser/"
+- from: "/fyp/"
+  to: "/lamviz/"
+- from: "/fyp/gallery/"
+  to: "/lamviz/gallery/"
+- from: "/papers/lambda-visualiser/"
+  to: "/files/papers/2019-04-08-masters.pdf"
+- from: "/lambda-visualiser/visualiser/"
+  to: "/lamviz/visualiser/"
+- from: "/lambda-visualiser/gallery"
+  to: "/lamviz/gallery/"
+- from: "/lambda-visualiser/"
+  to: "/lamviz/"
+
+# blogposts
+
+- from: "/2021/11/26/adventures-in-actademia-part-three/"
+  to: "/blog/adventures/act2021/part-three/"
+- from: "/2021/10/21/adventures-in-actademia-part-two/"
+  to: "/blog/adventures/act2021/part-two/"
+- from: "/2021/10/07/adventures-in-actademia-part-one/"
+  to: "/blog/adventures/act2021/part-one/"
+- from: "/2021/09/02/contending-with-contensis/"
+  to: "/blog/contending-with-contensis/"
+- from: "/2021/08/04/adventures-in-edinburgh-part-four/"
+  to: "/blog/adventures/edinburgh/part-four/"
+- from: "/2021/07/20/adventures-in-edinburgh-part-three/"
+  to: "/blog/adventures/edinburgh/part-three/"
+- from: "/2021/06/25/adventures-in-edinburgh-part-two/"
+  to: "/blog/adventures/edinburgh/part-two/"
+- from: "/2021/06/16/adventures-in-edinburgh-part-one/"
+  to: "/blog/adventures/edinburgh/part-one/"
+- from: "/2021/05/13/adventures-in-academia-part-four/"
+  to: "/blog/adventures/part-four/"
